<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/xs">

    <!-- Name -->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/name"
        android:textSize="@dimen/tx_l"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end" />

    <!-- Quantity -->
    <TextView
        android:id="@+id/tvQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/quantity"
        android:textSize="@dimen/tx_l" />

    <!-- Total Price -->
    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="@dimen/tx_l" />

</LinearLayout>
