<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ticket_detail.TicketDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/l"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="?attr/colorOnSurface"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ticket_detail"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        </com.google.android.material.appbar.MaterialToolbar>

        <!-- Name, Quantity, Total -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/s">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="@dimen/tx_m" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quantity"
                android:textStyle="bold"
                android:textSize="@dimen/tx_m" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/total"
                android:textStyle="bold"
                android:textSize="@dimen/tx_m" />

        </LinearLayout>

        <!-- Content -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/xs"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/xxxxl" />

        </FrameLayout>

        <!-- Total -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:padding="@dimen/xl">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvtotal"
                android:textStyle="bold"
                android:textSize="@dimen/tx_xl" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textStyle="bold"
                android:textSize="@dimen/tx_xxl"
                android:paddingStart="@dimen/m" />

        </LinearLayout>


        <!-- Save button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xxl"
            android:backgroundTint="@color/blue"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>
</FrameLayout>
