<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/xxl"
    tools:context=".ui.popup.DeletePopFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/xs">

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure"
                android:textSize="@dimen/tx_xxxxl"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="@dimen/xs"
                android:gravity="center" />

            <!-- Description -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_want_to_delete_it"
                android:textSize="@dimen/tx_xxl"
                android:textColor="@color/black"
                android:padding="@dimen/s"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_cannot_be_undone"
                android:textSize="@dimen/tx_xxl"
                android:textColor="@color/black"
                android:padding="@dimen/s"
                android:gravity="center" />

            <!-- Cancel and Delete -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/xxxl"
                android:layout_marginTop="@dimen/xxl">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textSize="@dimen/tx_xl"
                    android:textColor="@color/white"
                    android:paddingVertical="@dimen/m"
                    app:cornerRadius="@dimen/m"
                    android:layout_marginEnd="@dimen/xxl"
                    app:backgroundTint="@color/blue" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbDelete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textSize="@dimen/tx_xl"
                    android:textColor="@color/white"
                    android:paddingVertical="@dimen/m"
                    app:cornerRadius="@dimen/m"
                    android:layout_marginStart="@dimen/xxl"
                    app:backgroundTint="@color/red" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
